...
                text = "Поздравляем, вы ответили на \(correctAnswers) из \(self.questionsAmount)!"
            } else {
                text = "Ваш результат: \(correctAnswers)/\(self.questionsAmount)"
            }
            
            let viewModel = QuizResultsViewModel(
                title: "Этот раунд окончен!",
                text: text,
                buttonText: "Сыграть ещё раз")
            viewController?.show(quiz: viewModel)
        } else {
            self.switchToNextQuestion()
            questionFactory?.requestNextQuestion()
...
